updated movie recommendation app
updates

--- a/movierecommendation/src/app/navigation-menu/navigation-menu.component.html
+++ b/movierecommendation/src/app/navigation-menu/navigation-menu.component.html
@@ -2,9 +2,10 @@
   <button mat-button [matMenuTriggerFor]="menu">Menu</button>
   <mat-menu #menu="matMenu">
   <button mat-menu-item routerLink="/home">Homepage</button>
-  <button mat-menu-item routerLink="/moviedb">Movie Database</button>
-  <button mat-menu-item routerLink="/recommendation">Recommendation Engine</button>
+  <button mat-menu-item routerLink="/recommendation">Recommendations</button>
+  <button mat-menu-item routerLink="/trailer">Browse Movies</button>
+  <button mat-menu-item routerLink="/saved-movies">Saved Movies</button>
   <button mat-menu-item routerLink="/reviews">Reviews</button>
-  <button mat-menu-item routerLink="/trailer">Trailer</button>
+
   </mat-menu>
 </div>
