--- a/movierecommendation/src/app/reviews/reviews.component.html
+++ b/movierecommendation/src/app/reviews/reviews.component.html
@@ -1,12 +1,66 @@
-<p>reviews works!</p>
-<div>
-    <button mat-button [matMenuTriggerFor]="menu">Menu</button>
-    <mat-menu #menu="matMenu">
-    <button mat-menu-item routerLink="/home">Homepage</button>
-    <button mat-menu-item routerLink="/moviedb">Movie Database</button>
-    <button mat-menu-item routerLink="/recommendation">Recommendation Engine</button>
-    <button mat-menu-item routerLink="/reviews">Reviews</button>
-    <button mat-menu-item routerLink="/trailer">Trailer</button>
-    </mat-menu>
-  </div>
+<h1>Movie Recommendation System</h1>
+<app-navigation-menu></app-navigation-menu>
 
+<div class="container">
+  <h2>{{ formName }}</h2>
+  <p>Select a movie, provide a rating, and share your review.</p>
+
+  <!-- Review Form -->
+  <form #reviewForm="ngForm" (ngSubmit)="onSubmit()" class="review-form">
+    <!-- Movie Dropdown -->
+    <div class="form-group">
+      <label for="movie">Movie Name:</label>
+      <select
+        id="movie"
+        name="movie"
+        [(ngModel)]="selectedMovie"
+        (change)="onMovieSelect()"
+        required
+      >
+        <option value="" disabled>Select a Movie</option>
+        <option *ngFor="let movie of trailers" [value]="movie.movie_Name">
+          {{ movie.movie_Name }}
+        </option>
+      </select>
+    </div>
+    <br />
+
+    <!-- Ratings -->
+    <div class="form-group">
+      <label for="ratings">Ratings:</label>
+      <div class="rating-options">
+        <label *ngFor="let rating of [1, 2, 3, 4, 5]">
+          <input
+            type="radio"
+            name="ratings"
+            [value]="rating"
+            [(ngModel)]="selectedRating"
+            required
+          />
+          {{ rating }}
+        </label>
+      </div>
+    </div>
+
+    <!-- Review Textarea -->
+    <div class="form-group">
+      <label for="review">Review:</label>
+      <textarea
+        id="review"
+        name="review"
+        [(ngModel)]="selectedReview"
+        placeholder="Write your review here"
+        rows="4"
+        cols="50"
+        required
+      ></textarea>
+    </div>
+
+    <!-- Action Buttons -->
+    <div class="button-group">
+      <button type="submit" [disabled]="!reviewForm.valid">Submit</button>
+      <button class="delete-button" type="button" (click)="deleteEntry()">Delete Entry</button>
+      <button type="button" (click)="resetForm()">Reset</button>
+    </div>
+  </form>
+</div>
